# DG-CZM

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/Adaptivity/: Adaptive_Friction_Everywhere.prm  Adaptivity.cc  CMakeLists.txt
apps/Bayat-pf/: Bayat-pf.cc  CMakeLists.txt
apps/Bayat2/: Bayat2.cc  CMakeLists.txt
apps/CZMs/: CMakeLists.txt  CZMs.cc
apps/CZMs2/: CMakeLists.txt  CZMs2.cc
apps/Nguyen/: CMakeLists.txt  Nguyen.cc
apps/Rewrite/: CMakeLists.txt  Rewrite.cc
apps/arc-length/: CMakeLists.txt  arc-length.cc
apps/deal/: CMakeLists.txt  deal.cc
apps/fenics-dg/: CMakeLists.txt  fenics-dg.cc
apps/lorenzo/: CMakeLists.txt  lorenzo.cc
apps/myPF/: CMakeLists.txt  myPF.cc
include/Adaptivity/: Friction-adaptivity.h  Friction_adaptivity_everywhere.h
include/Bayat-pf/: Laplace-DG.h  Newton-CG-elasticity-CZM.h  Newton-DG-15.h  Newton-DG-elasticity-CZM-Kinsol.h  Newton-DG-elasticity-CZM-parallel.h  Newton-DG-elasticity-CZM-simplified.h  Newton-DG-elasticity-CZM.h  Newton-DG-elasticity.h
include/Bayat2/: Newton-DG-elasticity-CZM.h
include/CZMs/: Exponential_TSL.h  TSL.h  TSL_everywhere.h  TSL_parallel.h  TSL_prallel_old.h  fenics_delamitation.h
include/CZMs2/: Friction-extrinsic.h  TSL-Freddi.h  TSL-Friction-Freddi.h  TSL_everywhere.h
pre-post/: System.jl  analyticBayat.jl  analyticalDamage.jl  beam.geo  fenics.geo  fenicsr2.5.2.msh  fenicsr2.5.msh  fine_hole.geo  fine_hole.msh  forces_openings.jl  forces_q_points.jl  half_matrix.geo  half_matrix_fine.geo  hole.geo  input.prm  matrix.geo  pull_out.geo  truss-arc.msh
run/ARC/: TSL.prm  (+2 more)
(+88 files in other folders)
